--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 ﻿{
-	"name": "gitbook-plugin-page-toc-button",
+	"name": "gitbook-plugin-page-toc-button-rmp",
 	"version": "0.1.1",
 	"description": "Adds a page toc button to your Gitbook",
     "main": "index.js",
     "license": "Apache-2.0",
-    "author": "STÜBER SYSTEMS <gitbook@stueber.de>",
+    "author": "Malcolm Haslam <mhaslam@runmyprocess.com>",
     "engines": {
         "gitbook": ">=3.1.1"
     },
-	"homepage": "https://github.com/stuebersystems/gitbook-plugin-page-toc-button",
+	"homepage": "https://github.com/MalcolmHaslam/gitbook-plugin-page-toc-button",
     "repository": {
         "type": "git",
-        "url": "https://github.com/stuebersystems/gitbook-plugin-page-toc-button.git"
+        "url": "https://github.com/MalcolmHaslam/gitbook-plugin-page-toc-button.git"
     },
     "bugs": {
-		"url": "https://github.com/stuebersystems/gitbook-plugin-page-toc-button/issues"
+		"url": "https://github.com/MalcolmHaslam/gitbook-plugin-page-toc-button/issues"
 	}
 }
